# cmake-smfl-cpp-game

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/enemy/: CMakeLists.txt  enemy.cpp  enemy.h
src/game/: CMakeLists.txt  game.cpp  game.h
src/item/: CMakeLists.txt  item.cpp  item.h
src/player/: CMakeLists.txt  player.cpp  player.h
src/utils/: CMakeLists.txt  gameobject.h
